--- a/blender.html
+++ b/blender.html
@@ -17,7 +17,7 @@
 
 <main>
 
-	<h1 style="margin-bottom: 0;">Blender Workshop links</h1>
+	<h1 style="margin-bottom: 0;">Blender workshop links</h1>
 	
 	<h2>Hotkeys</h2>
 	
