--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -82,8 +82,7 @@
 		
 	<p>
 		This way, even if Headset #1 isn't close enough to scan what Headset #2 
-		is hiding behind, #1 will still know that something is there because #2
-		will stream its scan.
+		is hiding behind, #2 will tell #1 that something is there.
 
 		
 	<h2>Depth lighting</h2>
