--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -19,7 +19,7 @@
 
 	<h1>Animations</h1>
 	<h3>
-		Fragments from work-in-progress projects.
+		Fragments from work-in-progress projects
 		<p>
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/substance.png">
