--- a/portfolio/virtuallab.html
+++ b/portfolio/virtuallab.html
@@ -19,7 +19,7 @@
 	<h1>Nuclear engineering<br>virtual education</h1>
 	<h3>
 		Use highly-detailed simulations of nuclear survey equipment 
-		in your web browser.
+		in your web browser
 		<p>
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/blender.png">
