--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasertag/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				mixed reality<br>laser tag
+				Mixed reality<br>laser tag
 			</div>
         </a>
         
@@ -30,7 +30,7 @@
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/virtuallab/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				nuclear engineering virtual education
+				Nuclear engineering virtual education
 			</div>
         </a>
 		
@@ -38,7 +38,7 @@
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/courthouse/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				projected motion graphics
+				Projected motion graphics
 			</div>
         </a>
 		
@@ -46,7 +46,7 @@
             <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/surveymeter/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				mixed reality nuclear pharmacy education
+				Mixed reality nuclear pharmacy education
 			</div>
         </a>
 		
@@ -62,7 +62,7 @@
             <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/snowman/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				work-in-progress animated shorts
+				Work-in-progress animated shorts
 			</div>
         </a>
         
