--- a/more.html
+++ b/more.html
@@ -17,7 +17,7 @@
 
 <main>
 
-	<h1 style="margin-bottom: 0;">more</h1>
+	<h1 style="margin-bottom: 0;">More</h1>
 	
 	<ul style="">
 		<li><a href="/portfolio/cgt321.html">
