--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -19,7 +19,7 @@
 
 	<h1>Global game jam 2024</h1>
 	<h3>
-		A clown-wrangling VR game made in 48 hours by a team of 3.
+		A clown-wrangling VR game made in 48 hours by a team of 3
 		<p>
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/unity.png">
