--- a/resources/nav.html
+++ b/resources/nav.html
@@ -14,23 +14,23 @@
 			</a>
 
 			<ul style="text-align: right;">
-				<li><a href="/index.html" target="_top">home</a></li>
-				<li><a href="/about.html" target="_top">about</a></li>
+				<li><a href="/index.html" target="_top">Home</a></li>
+				<li><a href="/about.html" target="_top">About</a></li>
 				<!-- <li><a href="/blog.html" target="_top">misc</a></li> -->
-				<li><a href="/more.html" target="_top">more</a></li>
+				<li><a href="/more.html" target="_top" >More</a></li>
 			</ul>
 
 			<ul style="font-size:0.6em; padding-top:15px; text-align: right; font-family:body;">
 				<li><a href="https://bsky.app/profile/trev3d.com" target="_blank" rel="noopener noreferrer">
-					bluesky >>></a>
+					Bluesky >>></a>
 				<li><a href="https://twitter.com/trev3d" target="_blank" rel="noopener noreferrer">
-					twitter >>></a>
+					Twitter >>></a>
 				<li><a href="https://github.com/trev3d" target="_blank" rel="noopener noreferrer">
-					github >>></a>
+					GitHub >>></a>
 				<!-- <li><a href="https://sketchfab.com/trev3d" target="_blank" rel="noopener noreferrer">
 					sketchfab</a> -->
 				<li><a href="https://www.linkedin.com/in/jtriveri/" target="_blank" rel="noopener noreferrer">
-					linkedin >>></a>
+					LinkedIn >>></a>
 				<!-- <li><a href="https://www.youtube.com/@trev3d/videos" target="_blank" rel="noopener noreferrer">
 					youtube</a> -->
 
