--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/courthouse/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				Projected motion graphics
+				Projected<br>motion graphics
 			</div>
         </a>
 		
@@ -54,7 +54,7 @@
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/mocap/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				VR + motion capture prototype
+				VR + motion<br>capture prototype
 			</div>
 		</a>
 
