--- a/resources/nav.html
+++ b/resources/nav.html
@@ -30,7 +30,7 @@
 				<!-- <li><a href="https://sketchfab.com/trev3d" target="_blank" rel="noopener noreferrer">
 					sketchfab</a> -->
 				<li><a href="https://www.linkedin.com/in/jtriveri/" target="_blank" rel="noopener noreferrer">
-					LinkedIn >>></a>
+					Linkedin >>></a>
 				<!-- <li><a href="https://www.youtube.com/@trev3d/videos" target="_blank" rel="noopener noreferrer">
 					youtube</a> -->
 
