--- a/about.html
+++ b/about.html
@@ -21,7 +21,8 @@
     <p>
 		I'm Julian Triveri, a
 		full-time tech artist at the 
-		<a href="https://www.rcac.purdue.edu/envision">Purdue Envision Center >>></a>
+		<a href="https://www.rcac.purdue.edu/envision">
+		Purdue Envision Center  →</a>
 		and a part-time undergrad at Purdue University in the US. 
 		I wear many hats and I'm always looking for new ones to try on.
 	</p>
