--- a/more.html
+++ b/more.html
@@ -21,19 +21,19 @@
 	
 	<ul style="">
 		<li><a href="/portfolio/cgt321.html">
-			Illustrations for a class >>>
+			Illustrations for a class →
 		</a>
 		<li><a href="https://github.com/cellomonster" target="_blank">
-			Old Github >>>
+			Old Github →
 		</a>
 		<li><a href="/archive/index.html" target="_blank">
-			High-school archive >>>
+			High-school archive →
 		</a>
 		<li><a href="https://www.youtube.com/@trev3d/videos" target="_blank">
-			Youtube >>>
+			Youtube →
 		</a>
 		<li><a href="https://sketchfab.com/trev3d" target="_blank">
-			Sketchfab >>>
+			Sketchfab →
 		</a>
 	</ul>
 	
