--- a/portfolio/cgt321.html
+++ b/portfolio/cgt321.html
@@ -45,7 +45,7 @@
 		<img src="cgt321/mass.png"/>
 	</a>
 	<a href="https://www.institute-christ-king.org/columbus-home" target="_blank">
-		St. Leo Oratory >>>
+		St. Leo Oratory →
 	</a>
 	<p>
 		Recalled moment while attending mass. A window above Mary cast light through incense and onto a little girl wearing a veil.
@@ -57,7 +57,7 @@
 		<img src="cgt321/petman.png"/>
 	</a>
 	<a href="https://www.youtube.com/watch?v=mclbVTIYG8E" target="_blank">
-		Boston Dynamics' PETMAN >>>
+		Boston Dynamics' PETMAN →
 	</a>
 	
 	<br>
