--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -32,13 +32,14 @@
 			
 	<p>
 		Thanks to 
-		<a href="https://snebtor.org/">Purdue Prof. Esteban Garcia Bravo</a>,
+		<a href="https://snebtor.org/" target="_blank">
+		Purdue Prof. Esteban Garcia Bravo →</a>,
 		I had the opportunity to create two projection-mapped motion graphics for a local food & music festival.
 	</p>
 	<p>
 		I created these using Blender's parametric geometry and rendering tools together with a  
 		<a href="https://www.artstation.com/artwork/DAP9D9" target="_blank">
-			peer's bespoke base model of the courthouse
+			peer's bespoke base model of the courthouse →
 		</a>.
 		These animations played together with dozens of others on the facade of the
 		Tippecanoe County Courthouse in Lafayette, IN.
