--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -48,7 +48,7 @@
 	<p>
 	<h3>
 		<a href="https://www.meta.com/s/59aIPXxXi" target="_blank">
-			Download >>>
+			Download →
 		</a>
 	</h3>
 		
@@ -129,18 +129,18 @@
 	
 	<p>
 	<h3><a href="https://www.meta.com/s/59aIPXxXi" target="_blank">
-		Beta Release Channel >>>
+		Beta Release Channel →
 	</a></h3>
 	
 	<p>
 		<a href="https://discord.gg/DgTqG5A6BD" target="_blank">
-		Discord >>></a>
+		Discord →</a>
 		If you run into <i>any</i> issues or have any feedback, please
 		reach out by email or join the discord.
 		
 	<p>
 		<a href="https://github.com/anaglyphs/lasertag" target="_blank">
-		GitHub repo >>></a>
+		GitHub repo →</a>
 		The project is available on GitHub under the MIT license.
 		Feel free to reference (or steal) code for your own projects :)
 		
@@ -149,40 +149,40 @@
 	<ul>
 	
 		<li><a href="https://fizzyapple12.com" target="_blank">
-		Hazel Roeder</a> 
+		Hazel Roeder →</a> 
 		helped with some early programming and a ton of testing.
 		
 		<li><a href="https://www.rcac.purdue.edu/about/staff/gtakahas" target="_blank">
-		George Takahashi</a>
+		George Takahashi →</a>
 		
 		<li><a href="https://www.matthewstanciu.com" target="_blank">
-		Matthew Stanciu</a>
+		Matthew Stanciu →</a>
 		
 		<li><a href="https://www.jackhogan.me" target="_blank">
-		Jack Hogan</a>
+		Jack Hogan →</a>
 		
 		<li><a href="https://www.artstation.com/ratlz" target="_blank">
-		Blake Edwards</a>
+		Blake Edwards →</a>
 		
 		<li><a href="https://discord.com/invite/Emxq4dBj8G" target="_blank">
-		MelancholySeabiscuit</a>
+		MelancholySeabiscuit →</a>
 		
 		<li><a href="https://www.artstation.com/uninspirational" target="_blank">
-		William Yang</a>
+		William Yang →</a>
 		
 		<li><a href="https://alanocull.com" target="_blank">
-		Alan O'Cull</a>
+		Alan O'Cull →</a>
 		
 		<li><a href="https://www.navinate.com" target="_blank">
-		Trey Cluff</a>
+		Trey Cluff →</a>
 		
 		<li>fleech
 		
 		<li><a href="https://www.codehusky.com" target="_blank">
-		Loki</a>
+		Loki →</a>
 		
 		<li><a href="https://hellfire.tv" target="_blank">
-		Ben B.</a>
+		Ben B. →</a>
 		
 		<li><a href="https://www.purduehackers.com" target="_blank">
 		Purdue Hackers</a> and its members. Super helpful with
