--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -61,7 +61,7 @@
 		tracking nor Android &amp; Meta Quest. 
 		I instead modified an old 
 		<a href="https://github.com/XmanLCH/MotiveDirect" target="_blank">
-			third-party plugin compatible with Android</a> 
+			third-party plugin compatible with Android →</a> 
 		to support 1:1 skeletal tracking
 		and the latest version of OptiTrack's NatNet API.
 	</p>
@@ -84,21 +84,21 @@
 	<h2>Thanks</h2>
 	<p>
 		I'd like to thank my friends 
-		<a href="https://fizzyapple12.com/" target="_blank">Hazel</a>
+		<a href="https://fizzyapple12.com/" target="_blank">Hazel →</a>
 		&
-		<a href="https://www.matthewstanciu.com/" target="_blank">Matthew</a>
+		<a href="https://www.matthewstanciu.com/" target="_blank">Matthew →</a>
 		for testing and also coming on a late-night run to buy pool noodles for the swords. 
 		Thank you!
 	</p>
 	
 	<p>
 		I threw together several CC0 assets from 
-		<a href="https://polyhaven.com" target="_blank">PolyHaven.com</a>
-		and <a href="https://ambientcg.com" target="_blank">AmbientCG.com</a>
+		<a href="https://polyhaven.com" target="_blank">PolyHaven.com →</a>
+		and <a href="https://ambientcg.com" target="_blank">AmbientCG.com →</a>
 		to create a placeholder lava planet environment.
 		The robot model is a 
 		<a href="https://assetstore.unity.com/packages/3d/characters/robots/robot-kyle-urp-4696" target="_blank">
-			Unity standard asset</a>.
+			Unity standard asset →</a>.
 	</p>
 
 </main>
