--- a/resources/nav.html
+++ b/resources/nav.html
@@ -20,23 +20,39 @@
 				<li><a href="/more.html" target="_top" >More</a></li>
 			</ul>
 
-			<ul style="font-size:0.6em; padding-top:15px; text-align: right; font-family:body;">
+			<ul style="font-size:0.6em; margin:15px 0; text-align: right; font-family:body;">
 				<li><a href="https://bsky.app/profile/trev3d.com" target="_blank" rel="noopener noreferrer">
-					Bluesky >>></a>
+					Bluesky →</a>
 				<li><a href="https://twitter.com/trev3d" target="_blank" rel="noopener noreferrer">
-					Twitter >>></a>
+					Twitter →</a>
 				<li><a href="https://github.com/trev3d" target="_blank" rel="noopener noreferrer">
-					GitHub >>></a>
+					GitHub →</a>
 				<!-- <li><a href="https://sketchfab.com/trev3d" target="_blank" rel="noopener noreferrer">
 					sketchfab</a> -->
 				<li><a href="https://www.linkedin.com/in/jtriveri/" target="_blank" rel="noopener noreferrer">
-					Linkedin >>></a>
+					Linkedin →</a>
 				<!-- <li><a href="https://www.youtube.com/@trev3d/videos" target="_blank" rel="noopener noreferrer">
 					youtube</a> -->
 
 				<p>
  				<li style="font-size: 0.8em;">triveri at outlook dot com
+ 				
+ 				<p>
 			</ul>
+			
+			<div style="font-size:24px; margin:10px;">
+ 				<a href="https://ring.purduehackers.com/previous?host=trev3d.com" target="_top" style="text-align: center;">←</a>
+				<a href="https://ring.purduehackers.com" target="_top">
+ 					<svg height="24" width="24" viewBox="0 0 2160 2160" version="1.1" 
+ 					xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" 
+ 					style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+ 						<path d="M720.627,362.058L1080,571.597L1428.11,368.313L1429.15,773.832L1452.87,774.118L1454.11,357.11L1802.6,554.109L1804.96,1391.62L1454.43,1587.65L1454.11,1161.75L1080,1379.46L1080,1809.54L718.917,2015.02L358.458,1805.69L359.775,1402.62L726.188,1612.76L737.039,1591.83L373.201,1380.37L721.069,1177.37L720.627,362.058Z" style="fill:rgb(255,255,255);"></path>
+ 						<path id="Main" d="M720.627,362.058L721.069,1177.37L373.201,1380.37L737.039,1591.83L726.188,1612.76L359.775,1402.62L358.458,1805.69L718.917,2015.02L1080,1809.54L1080,1379.46L1454.11,1161.75L1454.43,1587.65L1804.96,1391.62L1802.6,554.109L1454.11,357.11L1452.87,774.118L1429.15,773.832L1428.11,368.313L1080,571.597L720.627,362.058Z" style="fill:none;"></path><g id="Bottom-Triangle" transform="matrix(1,0,0,1,-24,39)">
+ 						<path d="M1115.06,1359.64L1454.9,1556.32M1453.86,1161.32C1454.01,1161.23 1454.2,1161.23 1454.36,1161.32C1454.51,1161.4 1454.61,1161.57 1454.61,1161.75L1454.9,1556.32L1453.61,1162.62L1115.06,1359.64L1454.36,1161.32L1454.9,1556.32L1115.06,1359.64" style="fill:rgb(255,255,255);"></path></g>
+ 						<path d="M1080,546.597L731.583,343.446L1079.85,141.47L1428.11,343.313L1080,546.597Z" style="fill:rgb(255,255,255);"></path></svg>
+				</a>
+				<a href="https://ring.purduehackers.com/next?host=trev3d.com" target="_top">→</a>
+			</div>
 			
 		</nav>
 	</body>
