--- a/blender.html
+++ b/blender.html
@@ -28,19 +28,19 @@
 	<br>
 
 	<a href="http://blendershortcuts.lukaswestner.com/">
-		Basic Shortcuts >>>
+		Basic Shortcuts ➔
 	</a>
 	
 	<br>
 	
 	<a href="https://drive.usercontent.google.com/download?id=1lo5ydEvkJqhE7V0eIyyNSAJTXb7LxMQ5&export=view&authuser=0">
-		Advanced Shortcuts >>>
+		Advanced Shortcuts ➔
 	</a>
 	
 	<br>
 		
 	<a href="https://www.youtube.com/watch?v=0C0njghXPAI">
-		Hotkeys for Maya users >>>
+		Hotkeys for Maya users ➔
 	</a>
 	
 	<br>
@@ -48,25 +48,25 @@
 	<h2>Tutorials</h2>
 	
 	<a href="https://www.youtube.com/watch?v=B0J27sf9N1Y&list=PLjEaoINr3zgEPv5y--4MKpciLaoQYZB1Z">
-		Donut Tutorial series >>>
+		Donut Tutorial series ➔
 	</a>
 	
 	<br>
 	
 	<a href="https://www.youtube.com/playlist?list=PLa1F2ddGya_-UvuAqHAksYnB0qL9yWDO6">
-		Fundamentals Series (OLD!!!) >>>
+		Fundamentals Series (OLD!!!) ➔
 	</a>
 	
 	<br>
 	
 	<a href="https://www.youtube.com/channel/UCZo92PCc9mUwfDkKqZkZVzg">
-		DewDiehard's character topology >>>
+		DewDiehard's character topology ➔
 	</a>
 	
 	<br>
 	
 	<a href="https://topologyguides.com">
-		Subsurface topology reference >>>
+		Subsurface topology reference ➔
 	</a>
 	
 	</h2>
