--- a/portfolio/cgt321.html
+++ b/portfolio/cgt321.html
@@ -33,7 +33,7 @@
 		<img src="cgt321/church.png"/>
 	</a>
 	<a href="https://www.hallstatt.net/about-hallstatt/sehenswertes-en-US/catholic-church-of-hallstatt/" target="_blank">
-		Pfarrkirche Maria am Berg in Hallstatt, Austria >>>
+		Pfarrkirche Maria am Berg in Hallstatt, Austria ➔
 	</a>
 	<p>
 		Loosely based off of a photo I took.
@@ -45,7 +45,7 @@
 		<img src="cgt321/mass.png"/>
 	</a>
 	<a href="https://www.institute-christ-king.org/columbus-home" target="_blank">
-		St. Leo Oratory →
+		St. Leo Oratory ➔
 	</a>
 	<p>
 		Recalled moment while attending mass. A window above Mary cast light through incense and onto a little girl wearing a veil.
@@ -57,7 +57,7 @@
 		<img src="cgt321/petman.png"/>
 	</a>
 	<a href="https://www.youtube.com/watch?v=mclbVTIYG8E" target="_blank">
-		Boston Dynamics' PETMAN →
+		Boston Dynamics' PETMAN ➔
 	</a>
 	
 	<br>
