--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -40,10 +40,10 @@
 		I was responsible for the lasso manipulation & interaction as well as the environment graphics.
 		Made together with 
 		<a href="https://jake-white.github.io/" target="_blank">
-		Jake White  →</a>
+		Jake White  ➔</a>
 		and 
 		<a href="https://www.rcac.purdue.edu/about/staff/gtakahas" target="_blank">
-		George Takahashi  →</a>,
+		George Takahashi  ➔</a>,
 		this is a game we call <i>Learn the Ropes</i>.
 		We built this game in 48 hours for Global Game Jam 2024 using Unity.
 	</p>
@@ -57,7 +57,7 @@
 	<p>
 		Given the jam time constraint, 
 		<a href="http://obi.virtualmethodstudio.com/" target="_blank">
-		Obi Rope  →</a>
+		Obi Rope  ➔</a>
 		is responsible for the rope physics. 
 	</p>
 	
@@ -83,9 +83,9 @@
 	
 	<p>
 		The terrain is just a 360 CC0 environment from 
-		<a href="https://polyhaven.com/" target="_blank">PolyHaven  →</a>
+		<a href="https://polyhaven.com/" target="_blank">PolyHaven  ➔</a>
 		reprojected onto a mesh initially generated using 
-		<a href="https://github.com/isl-org/ZoeDepth" target="_blank">ZoeDepth  →</a>.
+		<a href="https://github.com/isl-org/ZoeDepth" target="_blank">ZoeDepth  ➔</a>.
 		This gives the terrain just enough depth to look
 		convincing as long as you don't stray too far from the center.
 	</p>
@@ -98,9 +98,9 @@
 	<p>
 		You can download the game for Oculus Quest from  
 		<a href="https://github.com/Clownboys/lasso" target="_blank">
-		Github →</a> or 
+		Github ➔</a> or 
 		<a href="https://globalgamejam.org/games/2024/learn-ropes-1" target="_blank">
-		Global Game Jam →</a>.
+		Global Game Jam ➔</a>.
 		We have loose plans to develop the game further and support other platforms.
 	</p>
 	
