--- a/portfolio/virtuallab.html
+++ b/portfolio/virtuallab.html
@@ -59,7 +59,7 @@
 	
 	<p>
 		<h3><a href="virtuallab/tbexport.html" target="_blank">
-			Fullscreen →
+			Fullscreen ➔
 		</a></h3>
 	</p>
 	
@@ -145,7 +145,7 @@
 	<p>
 		For cable physics I use
 		<a href="http://obi.virtualmethodstudio.com/" target="_blank">
-		Obi Rope →</a>.
+		Obi Rope ➔</a>.
 		My Obi settings are tuned for a decent balance between visual quality and performance.
 	</p>
 	
