lasertag special thanks

--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -144,7 +144,7 @@
 		The project is available on GitHub under the MIT license.
 		Feel free to reference (or steal) code for your own projects :)
 		
-	<h2>Special thanks</h2>
+	<h2>Credits & special thanks</h2>
 	
 	<ul>
 	
@@ -152,8 +152,18 @@
 		Hazel Roeder ➔</a> 
 		helped with some early programming and a ton of testing.
 		
+		<li><a href="https://www.linkedin.com/in/nico-uthe-961818aa/" target="_blank">
+		Nico Uthe ➔</a>
+		and 
+		<a href="https://www.freeroam.ar/" target="_blank">
+		freeroam.ar ➔</a> 
+		helped test and give feedback. They have their own mixed reality laser tag game too. Check it out!!!
+		
 		<li><a href="https://www.rcac.purdue.edu/about/staff/gtakahas" target="_blank">
 		George Takahashi ➔</a>
+		
+		<li><a href="https://bento.me/blackwhale" target="_blank">
+		Roberto Coviello ➔
 		
 		<li><a href="https://www.matthewstanciu.com" target="_blank">
 		Matthew Stanciu ➔</a>
@@ -190,7 +200,8 @@
 		
 		<li>Ernesto, who drew several blaster designs that I need to finish
 		as 3D models.
-		This project is dedicated to him. We all miss you dude. 
+		This project is dedicated to him. We all miss you dude.
+	</ul>
 
 </main>
 
