--- a/resources/nav.html
+++ b/resources/nav.html
@@ -37,7 +37,7 @@
 			<li style="margin:0;">
  				<a href="https://ring.purduehackers.com/previous?host=trev3d.com" target="_top" style="text-align: center; transform: scale(-1, 1); display:inline-block;">➔</a>
 				<a href="https://ring.purduehackers.com" target="_top">
- 					<svg height="1em" width="em" viewBox="0 0 2000 2000" version="1.1" 
+ 					<svg height="1em" width="1em" viewBox="0 0 2000 2000" version="1.1" 
  					xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" 
  					style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
  						<path d="M720.627,362.058L1080,571.597L1428.11,368.313L1429.15,773.832L1452.87,774.118L1454.11,357.11L1802.6,554.109L1804.96,1391.62L1454.43,1587.65L1454.11,1161.75L1080,1379.46L1080,1809.54L718.917,2015.02L358.458,1805.69L359.775,1402.62L726.188,1612.76L737.039,1591.83L373.201,1380.37L721.069,1177.37L720.627,362.058Z" style="fill:rgb(255,255,255);"></path>
