--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasertag/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				Mixed reality<br>laser tag
+				Lasertag 
 			</div>
         </a>
         
@@ -30,7 +30,7 @@
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/virtuallab/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				Nuclear engineering virtual education
+				Nuclear engineering web simulation
 			</div>
         </a>
 		
@@ -38,7 +38,7 @@
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/courthouse/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				Projected<br>motion graphics
+				Projection mapping
 			</div>
         </a>
 		
@@ -46,7 +46,7 @@
             <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/surveymeter/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				Mixed reality nuclear pharmacy education
+				MR radiation<br>survey meter
 			</div>
         </a>
 		
@@ -54,7 +54,7 @@
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/mocap/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				VR + motion<br>capture prototype
+				VR mocap-sabers
 			</div>
 		</a>
 
@@ -62,7 +62,7 @@
             <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/snowman/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				Work-in-progress animated shorts
+				WIP animation
 			</div>
         </a>
         
