--- a/more.html
+++ b/more.html
@@ -17,17 +17,11 @@
 
 <main>
 
-	<h1 style="margin-bottom: 0;">More</h1>
+	<h1 style="margin-bottom: 0;">Etc</h1>
 	
 	<ul style="">
-		<li><a href="/portfolio/cgt321.html">
-			Illustrations for a class ➔
-		</a>
 		<li><a href="https://github.com/cellomonster" target="_blank">
 			Old Github ➔
-		</a>
-		<li><a href="/archive/index.html" target="_blank">
-			High-school archive ➔
 		</a>
 		<li><a href="https://www.youtube.com/@trev3d/videos" target="_blank">
 			Youtube ➔
@@ -43,7 +37,7 @@
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasso/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				VR lasso<br>game-jam
+				Global game jam<br>2024
 			</div>
         </a>
 		
@@ -51,7 +45,23 @@
             <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/dioramas/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				light baking studies
+				3D dioramas
+			</div>
+        </a>
+		
+		<a class="packedCircle" href="/portfolio/cgt321.html">
+            <img class="thumbnail" src="/portfolio/cgt321/still.png">
+			
+			<div class="thumbtext">
+				CGT 321<br>(illustration class)
+			</div>
+        </a>
+		
+		<a class="packedCircle" href="/archive/index.html">
+			<video class="thumbnail" autoplay muted playsinline loop src="/archive/artwork/thumbnail/cyaneve.mp4"></video>
+			
+			<div class="thumbtext">
+				Website from<br>high school
 			</div>
         </a>
         
