--- a/resources/nav.html
+++ b/resources/nav.html
@@ -14,10 +14,10 @@
 			</a>
 
 			<ul style="text-align: right;">
-				<li><a href="/index.html" target="_top">Home</a>
+				<li><a href="/index.html" target="_top">Gallery</a>
 				<li><a href="/about.html" target="_top">About</a>
 				<!-- <li><a href="/blog.html" target="_top">misc</a></li> -->
-				<li><a href="/more.html" target="_top" >More</a>
+				<li><a href="/more.html" target="_top" >Etc</a>
 			</ul>
 
 			<ul style="font-size:0.6em; margin:15px 0; margin-top:20px; text-align: right; font-family:body;">
@@ -27,10 +27,12 @@
 					Twitter ➔</a>
 				<li><a href="https://github.com/trev3d" target="_blank" rel="noopener noreferrer">
 					GitHub ➔</a>
+				<li><a href="https://vimeo.com/trev3d" target="_blank" rel="noopener noreferrer">
+					Vimeo ➔</a>
 				<!-- <li><a href="https://sketchfab.com/trev3d" target="_blank" rel="noopener noreferrer">
 					sketchfab</a> -->
-				<li><a href="https://www.linkedin.com/in/jtriveri/" target="_blank" rel="noopener noreferrer">
-					Linkedin ➔</a>
+				<!-- <li><a href="https://www.linkedin.com/in/jtriveri/" target="_blank" rel="noopener noreferrer">
+					Linkedin ➔</a> -->
 				<!-- <li><a href="https://www.youtube.com/@trev3d/videos" target="_blank" rel="noopener noreferrer">
 					youtube</a> -->
 			
@@ -48,7 +50,7 @@
 				
 				<a href="https://ring.purduehackers.com/next?host=trev3d.com" target="_top">➔</a>
 				
- 				<li>triveri at<br>outlook<br>dot com
+ 				<li>triveri @t<br>outlook<br>.dot com
 			</ul>
 			
 		</nav>
