--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -17,7 +17,7 @@
 
 <main>
 
-	<h1>Mixed reality laser tag</h1>
+	<h1>Lasertag</h1>
 	<h3>
 		Turn any space into a laser tag arena with a single press
 		<p>
@@ -48,7 +48,7 @@
 	<p>
 	<h3>
 		<a href="https://www.meta.com/s/59aIPXxXi" target="_blank">
-			Download ➔
+			Join the beta for Meta Quest 3/3s ➔
 		</a>
 	</h3>
 		
