--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -17,10 +17,10 @@
 
 <main>
 
-	<h1>VR + mocap prototype</h1>
+	<h1>Mocap sabers</h1>
 	
 	<h3>
-		Embody VR lightsaber fighters on a mocap stage
+		Beat up your friend with foam swords on an OptiTrack stage
 		<p>
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/unity.png">
