--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -17,9 +17,9 @@
 
 <main>
 
-	<h1>Projection-mapped motion graphics</h1>
+	<h1>Projection mapping</h1>
 	<h3>
-		Custom motion graphics projected onto a courthouse facade
+		Custom motion graphics for a local food and music festival
 		<p>
 		<img class="software-icon" src="/resources/icons/blender.png">
 	</h3>
