--- a/portfolio/virtuallab.html
+++ b/portfolio/virtuallab.html
@@ -16,7 +16,7 @@
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
 <main>
-	<h1>Nuclear engineering<br>virtual education</h1>
+	<h1>Nuclear engineering<br>virtual lab</h1>
 	<h3>
 		Use highly-detailed simulations of nuclear survey equipment 
 		in your web browser
