add strikervr thanks

--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -35,11 +35,11 @@
 	
 	<p>
 		<i>Lasertag</i> (one word) is an experiment in reducing the friction
-		of mixed reality games with something that 'just works.'
+		& 'time to fun' of mixed reality games with something that 'just works.'
 		
 	<p>
-		It requires little prior setup, 
-		progressively scans and syncs room geometry between all players, 
+		It progressively scans and syncs room geometry 
+		between all players without any 'room setup' process 
 		and connects nearby headsets automatically.
 		
 	<p>
@@ -153,11 +153,14 @@
 		helped with some early programming and a ton of testing.
 		
 		<li><a href="https://www.linkedin.com/in/nico-uthe-961818aa/" target="_blank">
-		Nico Uthe ➔</a>
-		and 
+		Nico Uthe ➔</a> and 
 		<a href="https://www.freeroam.ar/" target="_blank">
-		freeroam.ar ➔</a> 
-		helped test and give feedback. They have their own mixed reality laser tag game too. Check it out!!!
+		freeroam.ar ➔</a>.
+		They have their own mixed reality laser tag game too. Check it out!!!
+		
+		<li><a href="https://strikervr.com/" target="_blank">
+		StrikerVR ➔</a> gifted two of their Mavrik haptic blasters
+		for integration. Also helped test the game. Check them out!!!
 		
 		<li><a href="https://www.rcac.purdue.edu/about/staff/gtakahas" target="_blank">
 		George Takahashi ➔</a>
