--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -22,32 +22,37 @@
 		Custom motion graphics for a local food and music festival
 		<p>
 		<img class="software-icon" src="/resources/icons/blender.png">
+		<img class="software-icon" src="/resources/icons/realitycapture.png">
 	</h3>
+	
+	<div class="webvid">
+	<iframe src="https://player.vimeo.com/video/1052416594?h=dddc621
+	&autoplay=1&loop=1&color=fee400&byline=0&portrait=0&muted=1"
+			allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+	</div>
+	
+	<p>
+		Thanks to 
+		<a href="https://snebtor.org/" target="_blank">
+		Purdue Prof. Esteban Garcia Bravo ➔</a>,
+		I had the opportunity to create two projection-mapped motion graphics for a local food & music festival.
+		
+	<p>I created the motion graphics in Blender on top of a scan I created of the courthouse
+	using RealityCapture.
+	
+	<p>Unfortunately the projectionist brought the wrong lens, 
+	so we could only cover a fraction of the building. 
+	
+	
+	<h2>2022</h2>
+	<p>This was a previous showing in the summer of 2022 
+	(with the correct lens but poorly calibrated to the building).
 	
 	<div class="webvid">
 		<iframe src="https://www.youtube.com/embed/vAEIovOlc44"
 			allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
 			allowfullscreen></iframe>
 	</div>
-			
-	<p>
-		Thanks to 
-		<a href="https://snebtor.org/" target="_blank">
-		Purdue Prof. Esteban Garcia Bravo ➔</a>,
-		I had the opportunity to create two projection-mapped motion graphics for a local food & music festival.
-	</p>
-	<p>
-		I created these using Blender's parametric geometry and rendering tools together with a  
-		<a href="https://www.artstation.com/artwork/DAP9D9" target="_blank">
-			peer's bespoke base model of the courthouse ➔
-		</a>.
-		These animations played together with dozens of others on the facade of the
-		Tippecanoe County Courthouse in Lafayette, IN.
-	</p>
-	
-	<p>
-		Completed Summer 2022
-	</p>
 
 </main>
 
