--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -31,14 +31,16 @@
 			allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 	</div>
 	
-	<p>
-		Thanks to 
-		<a href="https://snebtor.org/" target="_blank">
-		Purdue Prof. Esteban Garcia Bravo ➔</a>,
-		I had the opportunity to create two projection-mapped motion graphics for a local food & music festival.
+	<p>Thanks to 
+	<a href="https://snebtor.org/" target="_blank">
+	Purdue Prof. Esteban Garcia Bravo ➔</a>,
+	I had the opportunity to create two projection-mapped motion graphics 
+	for a local food & music festival.
 		
-	<p>I created the motion graphics in Blender on top of a scan I created of the courthouse
-	using RealityCapture.
+	<p>I created the motion graphics in Blender on top of a scan 
+	I created of the courthouse using RealityCapture.
+	
+	<a href="lasso/playing.jpg" target="_blank"><img src="courthouse/neon.png"></a>
 	
 	<p>Unfortunately the projectionist brought the wrong lens, 
 	so we could only cover a fraction of the building. 
