--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -40,7 +40,8 @@
 	<p>I created the motion graphics in Blender on top of a scan 
 	I created of the courthouse using RealityCapture.
 	
-	<a href="lasso/playing.jpg" target="_blank"><img src="courthouse/neon.png"></a>
+	<p><a href="courthouse/neon.png" target="_blank">
+	<img src="courthouse/neon.png"></a>
 	
 	<p>Unfortunately the projectionist brought the wrong lens, 
 	so we could only cover a fraction of the building. 
