--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -33,23 +33,23 @@
 	
 	<p>Thanks to 
 	<a href="https://snebtor.org/" target="_blank">
-	Purdue Prof. Esteban Garcia Bravo ➔</a>,
+	Esteban Garcia Bravo ➔</a>,
 	I had the opportunity to create two projection-mapped motion graphics 
-	for a local food & music festival.
+	for a local food & music festival in the summer of 2024. 
 		
 	<p>I created the motion graphics in Blender on top of a scan 
-	I created of the courthouse using RealityCapture.
-	
-	<p><a href="courthouse/neon.png" target="_blank">
-	<img src="courthouse/neon.png"></a>
+	of the courthouse I captured and processed in RealityCapture.
 	
 	<p>Unfortunately the projectionist brought the wrong lens, 
 	so we could only cover a fraction of the building. 
 	
+	<p><a href="courthouse/neon.png" target="_blank">
+	<img src="courthouse/neon.png"></a>
+	
 	
 	<h2>2022</h2>
-	<p>This was a previous showing in the summer of 2022 
-	(with the correct lens but poorly calibrated to the building).
+	<p>This was a previous showing  
+	with the correct lens but poorly calibrated to the building.
 	
 	<div class="webvid">
 		<iframe src="https://www.youtube.com/embed/vAEIovOlc44"
