--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -152,22 +152,18 @@
 		Hazel Roeder ➔</a> 
 		helped with some early programming and a ton of testing.
 		
-		<li><a href="https://www.linkedin.com/in/nico-uthe-961818aa/" target="_blank">
-		Nico Uthe ➔</a> and 
-		<a href="https://www.freeroam.ar/" target="_blank">
-		freeroam.ar ➔</a>.
-		They have their own mixed reality laser tag game too. Check it out!!!
-		
 		<li><a href="https://strikervr.com/" target="_blank">
 		StrikerVR ➔</a> gifted two of their Mavrik haptic blasters
 		for integration. Also helped test the game. Check them out!!!
 		
-		<li><a href="https://www.rcac.purdue.edu/about/staff/gtakahas" target="_blank">
-		George Takahashi ➔</a>
-		
-		<li><a href="https://bento.me/blackwhale" target="_blank">
-		Roberto Coviello ➔
-		
+		<li>Ernesto, who drew several blaster designs that I need to finish
+		as 3D models.
+		This project is dedicated to him. We all miss you dude.
+	</ul>
+	
+		<h3>Playtesters</h3>
+	
+	<ul>
 		<li><a href="https://www.matthewstanciu.com" target="_blank">
 		Matthew Stanciu ➔</a>
 		
@@ -186,8 +182,8 @@
 		<li><a href="https://alanocull.com" target="_blank">
 		Alan O'Cull ➔</a>
 		
-		<li><a href="https://www.navinate.com" target="_blank">
-		Trey Cluff ➔</a>
+		<li><a href="https://www.rcac.purdue.edu/about/staff/gtakahas" target="_blank">
+		George Takahashi ➔</a> 
 		
 		<li>fleech
 		
@@ -197,13 +193,19 @@
 		<li><a href="https://hellfire.tv" target="_blank">
 		Ben B. ➔</a>
 		
+		<li><a href="https://www.instagram.com/studio.maverick/" target="_blank">
+		StudioMaverick ➔</a>
+		
 		<li><a href="https://www.purduehackers.com" target="_blank">
 		Purdue Hackers ➔</a> and its members. Super helpful with
 		playstesting and a great place to hang out. 
 		
-		<li>Ernesto, who drew several blaster designs that I need to finish
-		as 3D models.
-		This project is dedicated to him. We all miss you dude.
+				
+		<li><a href="https://www.linkedin.com/in/nico-uthe-961818aa/" target="_blank">
+		Nico Uthe ➔</a> and 
+		<a href="https://www.freeroam.ar/" target="_blank">
+		freeroam.ar ➔</a>.
+		They have their own mixed reality laser tag game too. Check it out!!!
 	</ul>
 
 </main>
