--- a/index.html
+++ b/index.html
@@ -13,15 +13,10 @@
 <div id="backgroundGlyph"></div>
 
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
-<iframe id="navframe" src="/resources/nav.html"></iframe>
+
+<iframe id="navframe" src="/nav.html"></iframe>
 
 <main>
-
-<!--
-https://ring.purduehackers.com/next?host=trev3d.com
-https://ring.purduehackers.com/previous?host=trev3d.com
-https://ring.purduehackers.com/
--->
 
     <div class="circlesPacked">
 		<a class="packedCircle" href="/portfolio/lasertag.html">
