--- a/nav.html
+++ b/nav.html
@@ -6,11 +6,11 @@
 		<link rel="stylesheet" href="/resources/style.css">
 	</head>
 
-	<body style="padding:0; margin:0; overflow-x: hidden; background-color:transparent; background-image:none;">
+	<body style="padding:0; background-color:transparent;">
 		
 		<nav>
-			<a href="/index.html" target="_top" style="display: block; width:150px;">
-				<img src="/resources/dog.svg" style="width: auto; height: auto; margin: 10px; " alt="home">
+			<a href="/index.html" target="_top" style="display:block; width:150px;">
+				<img src="/resources/dog.svg" style="width: auto; height: auto; margin: 10px;" alt="home">
 			</a>
 
 			<ul style="font-size:1.8em;">
@@ -37,8 +37,8 @@
 					youtube</a> -->
 			
 				<li>
-					<a href="https://ring.purduehackers.com/previous?host=trev3d.com" target="_top" style="text-align: center; transform: scale(-1, 1); display:inline-block;">➔</a>
-					<a href="https://ring.purduehackers.com" target="_top">
+					<a href="https://ring.purduehackers.com/previous?host=trev3d.com" target="_top" style="text-align: center; transform: scale(-1, 1); display:inline-block; text-decoration:none;">➔</a>
+					<a href="https://ring.purduehackers.com" target="_top" style="text-decoration:none;">
 						<svg height="1em" width="1em" viewBox="0 0 2000 2000" version="1.1" 
 						xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" 
 						style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
@@ -47,7 +47,7 @@
 							<path d="M1115.06,1359.64L1454.9,1556.32M1453.86,1161.32C1454.01,1161.23 1454.2,1161.23 1454.36,1161.32C1454.51,1161.4 1454.61,1161.57 1454.61,1161.75L1454.9,1556.32L1453.61,1162.62L1115.06,1359.64L1454.36,1161.32L1454.9,1556.32L1115.06,1359.64" style="fill:rgb(255,255,255);"></path></g>
 							<path d="M1080,546.597L731.583,343.446L1079.85,141.47L1428.11,343.313L1080,546.597Z" style="fill:rgb(255,255,255);"></path></svg>
 					</a>
-				<a href="https://ring.purduehackers.com/next?host=trev3d.com" target="_top">➔</a>
+					<a href="https://ring.purduehackers.com/next?host=trev3d.com" target="_top" style="text-decoration:none;">➔</a>
 				
  				<p><li><div style="display:none;">blah</div>triveri<br>
 				<div style="display:none;">@gmail.com</div>
