--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -13,7 +13,7 @@
 <div id="backgroundGlyph"></div>
 
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
-<iframe id="navframe" src="/resources/nav.html"></iframe>
+<iframe id="navframe" src="/nav.html"></iframe>
 
 <main style="position:relative;">
 
