--- a/mobilenav.html
+++ b/mobilenav.html
@@ -13,7 +13,7 @@
 <div id="backgroundGlyph"></div>
 
 <iframe style="position:absolute; top:0; left:0; width:100%; height:100%; margin:0; padding:0;" 
-	src="/resources/nav.html"></iframe>
+	src="/nav.html"></iframe>
 
 </body>
 </html>
