--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -79,7 +79,7 @@
 		
 	<p>Currently, I only use this network-synced heightmap 
 		for bullet collision, but I plan on testing everything 
-		from fire-spreading molotovs to a sSlatoon-like game mode.
+		from fire-spreading molotovs to a Splatoon-like game mode.
 		
 	<p>For each headset, a compute kernel samples the Quest's depth texture 
 		and writes to a per-frame uint32 heightmap texture using InterlockedMax
