new courthouse video

--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -26,29 +26,28 @@
 	</h3>
 	
 	<div class="webvid">
-	<iframe src="https://player.vimeo.com/video/1052416594?h=dddc621
-	&autoplay=1&loop=1&color=fee400&byline=0&portrait=0&muted=1"
+	<iframe src="https://player.vimeo.com/video/1073801246?h=3b54b0382c	&autoplay=1&loop=1&color=fee400&byline=0&portrait=0&muted=1"
 			allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 	</div>
 	
 	<p>Thanks to 
 	<a href="https://snebtor.org/" target="_blank">
 	Esteban Garcia Bravo ➔</a>,
-	I had the opportunity to create two projection-mapped motion graphics 
+	I had the opportunity to create several projection-mapped motion graphics 
 	for a local food & music festival in the summer of 2024. 
 		
-	<p>I created the motion graphics in Blender on top of a scan 
-	of the courthouse I captured and processed in RealityCapture.
+	<p>I captured and generated a mesh of the courthouse
+	using RealityCapture and created animations following the mesh.
 	
 	<p>Unfortunately the projectionist brought the wrong lens, 
-	so we could only cover a fraction of the building. 
+	so we could only cover a fraction of the area that we intended. 
 	
 	<p><a href="courthouse/neon.png" target="_blank">
 	<img src="courthouse/neon.png"></a>
 	
 	
 	<h2>2022</h2>
-	<p>This was a previous showing  
+	<p>This was a previous version  
 	with the correct lens but poorly calibrated to the building.
 	
 	<div class="webvid">
