--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -36,12 +36,13 @@
 	<p>
 		This is a test for a simple animation about
 		an adventurous snowman who visits the desert. 
-		I'm responsible for everything except for the scorpion.
-		This project is my excuse to start using Houdini for VFX.
+		I've got a simple story in mind but only have this one shot done.
+		The scorpion model is a placeholder.
 	</p>
 
 	<br>
 	
+<!-- 
 	<div class="webvid">
 		<iframe src="https://www.youtube.com/embed/Aae3vmD3QM0"
 				allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
@@ -53,6 +54,7 @@
 		The animation is very simple for now.
 		I'm responsible for everything here.
 	</p>
+ -->
 
 	<script src="https://player.vimeo.com/api/player.js"></script>
 
